chore(core,storage): add a test suite for storage
Storages have some behavior discrepencies. This PR add a test suite that
will attemp to resolve it by having the same test base on all storagei
type.